--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -6,7 +6,12 @@ include_directories(${YARP_INCLUDE_DIRS})
 list(APPEND CMAKE_MODULE_PATH ${YARP_MODULE_PATH})
 include(YarpPlugin)
 
-yarp_begin_plugin_library(TeoYarp)
+yarp_begin_plugin_library(GtestYarp)
     add_subdirectory(ExampleLibrary)
-yarp_end_plugin_library(TeoYarp)
+yarp_end_plugin_library(GtestYarp)
+
+install(TARGETS GtestYarp DESTINATION lib)
+
+yarp_add_plugin_yarpdev_executable(launchGtestYarp GtestYarp)
+install(TARGETS launchGtestYarp DESTINATION bin)
 
