--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ endif(COMMAND cmake_policy)
 
 project(GTEST_YARP_PLUGINS)
 
-#option(BUILD_SHARED_LIBS "All shared libs" TRUE)
+option(BUILD_SHARED_LIBS "All shared libs" TRUE)
 
 ### options: cpp libraries
 option(ENABLE_GtestYarp_ExampleLibrary "Choose if you want to compile ExampleLibrary" TRUE)
