--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ script:
   - sudo make install
   - sudo ldconfig
   - yarp plugin --list
-  - yarp plugin --verbose KdlSolver
+  - yarp plugin --verbose ExampleLibrary
   - ldd /usr/local/lib/yarp/ExampleLibrary.so
   - echo $YARP_VERBOSE
   - bin/testExampleLibrary
