implement exampleProgram, call from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ script:
   - yarp plugin --verbose ExampleLibrary
   - ldd /usr/local/lib/yarp/ExampleLibrary.so
   - echo $YARP_VERBOSE
+  - exampleProgram
   - bin/testExampleLibrary
 
 after_success:
