Remove SKIP_ACE as suggested by @PeterBowman
Remove SKIP_ACE as suggested by @PeterBowman at https://github.com/robotology/QA/issues/148#issuecomment-258177359 [thanks!]

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   #-- Install yarp
   - git clone https://github.com/robotology/yarp
   - cd yarp && mkdir build && cd build
-  - cmake .. -DSKIP_ACE=ON
+  - cmake ..
   - make
   - sudo make install
   - cd ../..
