ENABLE_tests so travis can run them

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ if (MSVC)
 endif(MSVC)
 
 ##### test and coverage options
-option(ENABLE_tests "Choose if you want to compile tests" FALSE)
+option(ENABLE_tests "Choose if you want to compile tests" TRUE)
 
 ######################
 
